syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.fepoc.ac.acn.cmd";
option java_outer_classname = "CommandProto";
option objc_class_prefix = "CMD";

package command;
import "google/protobuf/any.proto";
// The Command service definition.
service Commlet {
  rpc connect (CommandRequest) returns (CommandReply) {}
  rpc get (CommandRequest) returns (CommandReply) {}
  rpc put (CommandRequest) returns (CommandReply) {}
  rpc validate (CommandRequest) returns (CommandReply) {}
}

// The request message
message CommandRequest {
  CommandHeader header = 1;
  CommandBody body = 2;
}

message CommandHeader {
  message Login {
  	string client = 1;
  	bytes password = 2;
  }
  oneof Authorize {
    Login login = 1;
  	bytes accessToken = 2;  
  }
  string application = 3;
}

message CommandBody {
  int32 commandNo = 1;
  map<string, string> tags = 2;
  map<string, google.protobuf.Any> params = 3;
  google.protobuf.Any keys = 4;
  google.protobuf.Any payload = 5;
}
// The response message
message CommandReply {
  message Error {
   	string errorCode = 1;
   	string errorMsg = 2;
  }
  message ErrorMap {
  	map<string, Error> error = 1;
  }
  message State {
  	string stateCode = 1;
  	string stateMsg = 2;
  	google.protobuf.Any payload = 3;
  }
  oneof Response {
    ErrorMap errorMap = 1;
  	State state = 2;
  }
}